homepage translation update

--- a/src/utils/i18n/locales/bod/bod.json
+++ b/src/utils/i18n/locales/bod/bod.json
@@ -7,5 +7,15 @@
     "catalog": "དཀར་ཆག",
     "news": "གསར་འགྱུར།",
     "videos": "བརྙན།",
-    "aboutUs": "ང་ཚོའི་སྐོར།"
+    "aboutUs": "ང་ཚོའི་སྐོར།",
+    "subtitle": "ནང་པའི་ཤེས་རབ་བརྒྱུད་དེ་ཁྱེད་ཀྱི་འགྲུལ་བཞུད་འགོ་རྩོམ།",
+    "exploreRichness": "བཀའ་འགྱུར་གཞུང་ཡིག་གི་ཕྱུག་ཆ་ལ་བརྟག་དཔྱད་བྱེད་ནས་དེ་དག་གི་ནང་དུ་ཡོད་པའི་ཟབ་མོའི་བསྟན་པ་ཁག་རྙེད།",
+    "browseCatalog": "དཔེ་མཛོད་ལ་བལྟ།",
+    "aboutThisProject": "ལས་གཞི་འདིའི་སྐོར།",
+    "footerDescription": "བོད་བརྒྱུད་ནང་བསྟན་གྱི་བཀའ་འགྱུར་ཕྱོགས་སྒྲིག་གི་ཆེད་དུ་ཆ་ཚང་བའི་བརྡ་ཐོ་དཔེ་མཛོད་ཅིག་སྟེ། དམ་པའི་གཞུང་ཡིག་དང་། ཡིག་སྒྱུར། དེ་བཞིན་སློབ་གསོའི་ཐོན་ཁུངས་ཁག་ལ་བལྟ་ཐུབ་པ་བྱེད་ཀྱི་ཡོད།",
+    "madeWithLove": {
+        "pre": "ནང་པའི་ཤེས་རབ་སྲུང་སྐྱོབ་ཀྱི་ཆེད་དུ་བྱམས་སེམས་ཀྱིས་བཟོས་པ།",
+        "post": ""
+    }
+
 }
