--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -16,5 +16,6 @@
     "madeWithLove": {
         "pre": "Made with",
         "post": "for the preservation of Buddhist wisdom"
-    }
+    },
+    "historyTitle": "History of the Kangyur"
 }
