--- a/src/utils/i18n/locales/bod/bod.json
+++ b/src/utils/i18n/locales/bod/bod.json
@@ -16,6 +16,6 @@
     "madeWithLove": {
         "pre": "ནང་པའི་ཤེས་རབ་སྲུང་སྐྱོབ་ཀྱི་ཆེད་དུ་བྱམས་སེམས་ཀྱིས་བཟོས་པ།",
         "post": ""
-    }
-
+    },
+    "historyTitle": "བཀའ་འགྱུར་གྱི་ལོ་རྒྱུས།"
 }
