--- a/src/utils/i18n/locales/bod/bod.json
+++ b/src/utils/i18n/locales/bod/bod.json
@@ -30,5 +30,43 @@
     "newsSubtitle": "བཀའ་འགྱུར་ཞིབ་འཇུག་དང་ནང་པའི་ཡིག་ཆ་ཉམས་ཞིབ་ཐད་ཀྱི་གསར་ཤོས་ཀྱི་གནས་ཚུལ་དང་། རྙེད་དོན། བྱེད་སྒོ་བཅས།",
     "previous": "སྔོན་མ།",
     "next": "རྗེས་མ།",
-    "readMore": "མང་བ་ཀློག"
+    "readMore": "མང་བ་ཀློག",
+    "readLess": "ཉུང་བ་ཀློག",
+    "projectTitle": "བཀའ་འགྱུར་དཀར་ཆག་ཤེས་བྱ་ཀུན་འདུས་ལས་འཆར།",
+    "projectSubtitle": "སངས་རྒྱས་ཀྱི་བཀའ་ཉམས་ཞིབ་དང་བདག་ཉར་ལ་རོགས་རམ་བྱ་རྒྱུའི་འཛམ་གླིང་ཡོངས་ཁྱབ་ཀྱི་ལས་འགུལ་ཞིག",
+    "vision": "དམིགས་ཡུལ།",
+    "project": "ལས་གཞི།",
+    "team": "ལས་བྱེད།",
+    "contact": "འབྲེལ་གཏུགས།",
+    "missionDescription": "ཝཱ་ར་ཎ་སིའི་རྒྱལ་སྤྱིའི་རྙིང་མའི་སློབ་གླིང་གིས་བཀའ་འགྱུར་ཏེ། སངས་རྒྱས་ཀྱི་བཀའ་བོད་སྐད་དུ་བསྒྱུར་བ་དེ་ཉིད་མཁས་པ་དང་། ཉམས་ལེན་པ། རྒྱབ་སྐྱོར་བ་རྣམས་ལ་ང་ཚོའི་ཡོངས་ཁྱབ་བརྙན་རྫས་སྡིངས་ཆའི་བརྒྱུད་ནས་མཐུན་འགྱུར་བྱ་རྒྱུར་དམིགས་ཡུལ་བཟུང་།",
+    "projectDescription": "ང་ཚོའི་གསར་གཏོད་ཅན་གྱི་བཀའ་འགྱུར་བརྙན་རྫས་ལས་གཞི་འདིས་ནང་པའི་བསྟན་པའི་རིན་ཐང་བྲལ་བའི་མཛོད་འདི་ཉར་ཚགས་དང་བགོ་བཤའ་བྱེད་པར་སྔ་ན་མེད་པའི་འབད་བརྩོན་བྱེད་བཞིན་ཡོད། ང་ཚོའི་ལས་འགུལ་འདི་ཐུན་མོང་མ་ཡིན་པ་ཆགས་དོན་ནི།",
+    "digitalCatalog": "ཡོངས་ཁྱབ་བརྙན་རྫས་དཀར་ཆག",
+    "digitalCatalogDesc": "ང་ཚོས་བཀའ་འགྱུར་གྱི་ཆ་ཚང་བའི་བརྙན་རྫས་དཀར་ཆག་ཐོག་མ་དེ་བཟོ་སྐྲུན་བྱེད་བཞིན་ཡོད། དེ་ནི་ཞིབ་ཕྲའི་ཆ་ཤས་རེ་རེར་དོ་སྣང་ཆེན་པོ་དང་མཁས་པའི་ངེས་གཏན་ལྡན་པའི་སྒོ་ནས་སྒྲིག་སྦྱོར་བྱས་ཡོད།",
+    "searchCapabilities": "གསར་གཏོད་འཚོལ་བཤེར་ནུས་པ།",
+    "searchCapabilitiesDesc": "ང་ཚོའི་དམིགས་བསལ་དཀར་ཆག་ལ་ཞིབ་ཕྲའི་བསྡུས་དོན་དང་གཙོ་གནད་ཚིག་གི་རིམ་སྒྲིག་ཡོད་པས། སྤྱོད་མི་ཚོས་མཛོད་རྒྱ་ཆེན་པོ་འདིའི་ནང་ནས་བྱེ་བྲག་གི་བསྟན་པ་དང་བརྗོད་དོན་བདེ་ལེགས་ངང་འཚོལ་ཐུབ།",
+    "multimediaIntegration": "སྨྱན་མང་སྟོད་སྦྱོར།",
+    "multimediaIntegrationDesc": "ང་ཚོས་བཀའ་འགྱུར་དང་འབྲེལ་བའི་སྨྱན་མང་ཐོན་ཁུངས་རྣམས་ལམ་ལུགས་ལྡན་པའི་སྒོ་ནས་བསྡུ་རུབ་དང་སྒྲིག་སྦྱོར་བྱེད་བཞིན་ཡོད་པས། བསྟན་པ་འདི་དག་རྣམ་པ་མང་པོའི་ཐོག་ནས་བདེ་བླག་ཏུ་མཐུན་འགྱུར་ཡོང་གི་ཡོད།",
+    "multilingualSummaries": "སྐད་རིགས་མང་པོའི་བསྡུས་དོན།",
+    "multilingualSummariesDesc": "འཛམ་གླིང་ཡོངས་ཀྱི་སྤྱོད་མི་རྣམས་ལ་ཞབས་ཞུ་སྒྲུབ་ཆེད། ང་ཚོས་ཡིག་ཆའི་བསྡུས་དོན་གྱི་སྐད་བསྒྱུར་མཁོ་སྤྲོད་བྱས་ཏེ་ཟབ་མོའི་བསྟན་པ་འདི་དག་ལ་སྐད་ཡིག་གི་བར་ཆད་མེད་པར་བཟོ་གི་ཡོད།",
+    "projectYearsWork": "ལས་གཞི་འདིས་ང་ཚོའི་མཁས་པ་དང་། ལོ་ཙཱ་བ། བརྙན་རྫས་ཆེད་ལས་པ་བཅས་ཀྱི་ལོ་མང་གི་ལྷག་བསམ་ཅན་གྱི་ལས་ཀ་མཚོན་ལ། དེ་ཚང་མས་དམ་པའི་གཞུང་འདི་དག་ཏུ་ཡོད་པའི་ཤེས་རབ་ཉར་ཚགས་དང་བགོ་བཤའ་བྱེད་པའི་ཆོད་སེམས་བཅངས་ཡོད།",
+    "coreTeamMembers": "གཙོ་བོའི་ལས་བྱེད།",
+    "getInTouch": "འབྲེལ་གཏུགས་བྱོས།",
+    "inquiriesText": "བཀའ་འགྱུར་བརྙན་རྫས་ལས་གཞིའི་སྐོར་དང་། མཉམ་ལས་ཀྱི་གོ་སྐབས། གནས་ཚུལ་གཞན་བཅས་ཀྱི་འདྲི་རྩད་ཆེད།",
+    "email": "གློག་འཕྲིན།",
+    "phone": "ཁ་པར།",
+    "address": "ཁ་བྱང་།",
+    "connectWithUs": "ང་ཚོ་དང་འབྲེལ་མཐུད་བྱོས།",
+    "visitMainWebsite": "ང་ཚོའི་གཙོ་བོའི་དྲ་ཚིགས་ལ་གཟིགས།",
+    "followUs": "རྗེས་འབྲང་བྱོས།",
+    "joinUsText": "སངས་རྒྱས་ཀྱི་བསྟན་པའི་ཤེས་རབ་མི་རབས་ནས་མི་རབས་བར་ཉར་ཚགས་དང་བགོ་བཤའ་བྱེད་པའི་ལོ་རྒྱུས་ཅན་གྱི་འབད་བརྩོན་འདིར་ང་ཚོ་དང་མཉམ་དུ་ཞུགས་ཤོག",
+    "searchVideos": "བརྙེན་འཚོལ།",
+    "kangyurVideos": "བཀའ་འགྱུར་བརྙེན།",
+    "videosSubtitle": "བཀའ་འགྱུར་དང་འབྲེལ་བའི་གྲོས་མོལ། སློབ་ཁྲིད། བརྗོད་བྱ་སོགས།",
+    "watchTeachings": "སློབ་ཁྲིད་ལ་ལྟ།",
+    "viewText": "གཞུང་ལ་ལྟ།",
+    "browseTexts": "གཞུང་ཡིག་ཁག་ལ་གཟིགས།",
+    "textsCount": "གཞུང་གྲངས།",
+    "historicalContext": "ལོ་རྒྱུས་རྒྱབ་ལྗོངས།",
+    "selectCategory": "སྡེ་ཚན་ཞིག་འདེམས།",
+    "selectCategoryDesc": "ཁྱེད་ཀྱི་བཙལ་འཚོལ་འགོ་འཛུགས་པར་སྡེ་ཚན་ཞིག་གདམ་ཁ་བྱེད།"
 }
