--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -30,6 +30,43 @@
     "newsSubtitle": "Latest updates, discoveries, and events in Kangyur studies and Buddhist text research",
     "previous": "Previous",
     "next": "Next",
-    "readMore": "Read more"
-
+    "readMore": "Read more",
+    "readLess": "Read less",
+    "projectTitle": "The Kangyur Karchag Encyclopedia Project",
+    "projectSubtitle": "A Global Initiative to Support the Study and Preservation of the Words of the Buddha",
+    "vision": "Vision",
+    "project": "Project",
+    "team": "Team",
+    "contact": "Contact",
+    "missionDescription": "The Sarnath International Nyingma Institute (SINI) is dedicated to making the Kangyur—the collected words of the Buddha translated into Tibetan—accessible to scholars, practitioners, and enthusiasts worldwide through our comprehensive digital platform.",
+    "projectDescription": "Our groundbreaking Kangyur Digital Project represents an unprecedented effort to preserve and share this invaluable collection of Buddhist teachings. What makes our initiative unique:",
+    "digitalCatalog": "Comprehensive Digital Catalog",
+    "digitalCatalogDesc": "We are creating the first-ever complete digital catalog of the Kangyur, organized with meticulous attention to detail and scholarly accuracy.",
+    "searchCapabilities": "Innovative Search Capabilities",
+    "searchCapabilitiesDesc": "Our exclusive catalog features detailed summaries and keyword indexing, allowing users to efficiently locate specific teachings and themes across this vast collection.",
+    "multimediaIntegration": "Multimedia Integration",
+    "multimediaIntegrationDesc": "We are systematically collecting and organizing multimedia resources related to the Kangyur, making these teachings accessible in multiple formats.",
+    "multilingualSummaries": "Multilingual Summaries",
+    "multilingualSummariesDesc": "To serve a global audience, we provide translations of text summaries, breaking down language barriers to these profound teachings.",
+    "projectYearsWork": "This project represents years of dedicated work by our team of scholars, translators, and digital specialists, all committed to preserving and sharing the wisdom contained in these sacred texts.",
+    "coreTeamMembers": "Core Team Members",
+    "getInTouch": "Get in Touch",
+    "inquiriesText": "For inquiries about the Kangyur Digital Project, collaboration opportunities, or other information:",
+    "email": "Email",
+    "phone": "Phone",
+    "address": "Address",
+    "connectWithUs": "Connect With Us",
+    "visitMainWebsite": "Visit Our Main Website",
+    "followUs": "Follow Us",
+    "joinUsText": "Join us in this historic effort to preserve and share the wisdom of the Buddha's teachings for generations to come.",
+    "searchVideos": "Search Videos",
+    "kangyurVideos": "Kangyur Videos",
+    "videosSubtitle": "Talks, teachings, and documentaries related to the Kangyur",
+    "watchTeachings": "Watch Teachings",
+    "viewText": "View Text",
+    "browseTexts": "Browse Texts",
+    "textsCount": "Texts",
+    "historicalContext": "Historical Context",
+    "selectCategory": "Select a Category",
+    "selectCategoryDesc": "Select a category to start your exploration"
 }
