--- a/src/utils/i18n/locales/bod/bod.json
+++ b/src/utils/i18n/locales/bod/bod.json
@@ -68,5 +68,23 @@
     "textsCount": "གཞུང་གྲངས།",
     "historicalContext": "ལོ་རྒྱུས་རྒྱབ་ལྗོངས།",
     "selectCategory": "སྡེ་ཚན་ཞིག་འདེམས།",
-    "selectCategoryDesc": "ཁྱེད་ཀྱི་བཙལ་འཚོལ་འགོ་འཛུགས་པར་སྡེ་ཚན་ཞིག་གདམ་ཁ་བྱེད།"
+    "selectCategoryDesc": "ཁྱེད་ཀྱི་བཙལ་འཚོལ་འགོ་འཛུགས་པར་སྡེ་ཚན་ཞིག་གདམ་ཁ་བྱེད།",
+    "tantra": "རྒྱུད།",
+    "discourses": "མདོ།",
+    "discipline": "འདུལ་བ།",
+    "searchCatalogPlaceholder": "དཀར་ཆག་འཚོལ་ཞིབ་བྱ།",
+    "searchResultsFor": "འཚོལ་ཞིབ་ཀྱི་གྲུབ་འབྲས།",
+    "clearSearch": "འཚོལ་ཞིབ་བསལ།",
+    "noItemsFound": "རྣམ་གྲངས་མ་རྙེད།",
+    "discipline": "འདུལ་བ།",
+    "prajnaparamita": "ཤེར་ཕྱིན།",
+    "avatamsaka": "ཕལ་ཆེན།",
+    "ratnakuta": "དཀོན་བརྩེགས།",
+    "generalSutras": "མདོ་སྡེ།",
+    "tantraAnuttarayoga": "བླ་མེད་རྒྱུད།",
+    "tantraYoga": "རྣལ་འབྱོར་རྒྱུད།",
+    "tantraCarya": "སྤྱོད་རྒྱུད།",
+    "tantraKriya": "བྱ་རྒྱུད།",
+    "nyiTantra": "རྙིང་རྒྱུད།",
+    "kalacakra": "དུས་འཁོར།"
 }
