--- a/src/utils/i18n/locales/en/en.json
+++ b/src/utils/i18n/locales/en/en.json
@@ -68,5 +68,23 @@
     "textsCount": "Texts",
     "historicalContext": "Historical Context",
     "selectCategory": "Select a Category",
-    "selectCategoryDesc": "Select a category to start your exploration"
+    "selectCategoryDesc": "Select a category to start your exploration",
+    "tantra": "Tantra",
+    "discourses": "Discourses",
+    "discipline": "Discipline",
+    "searchCatalogPlaceholder": "Search the karchag...",
+    "searchResultsFor": "Showing search results for:",
+    "clearSearch": "Clear Search",
+    "noItemsFound": "No items found",
+    "discipline": "Discipline",
+    "prajnaparamita": "Prajñāpāramitā",
+    "avatamsaka": "Avataṃsaka",
+    "ratnakuta": "Ratnakūṭa",
+    "generalSutras": "General Sūtras",
+    "tantraAnuttarayoga": "Anuttarayoga",
+    "tantraYoga": "Yoga",
+    "tantraCarya": "Carya",
+    "tantraKriya": "Kriya",
+    "nyiTantra": "Nying",
+    "kalacakra": "Kalachakra"
 }
