Refactor Karchag text model and update related components
- Replaced 'turning' with 'sermon' in the Karchag text model and related database schema.
- Updated controller methods to reflect changes in text attributes, including the removal of 'yeshe_de_page_start' and 'yeshe_de_page_end' in favor of 'yeshe_de_volume_length'.
- Adjusted frontend components to accommodate the new text structure and ensure proper data handling.
- Enhanced localization files to include new keys for 'sermon' and 'yeshe_de_volume_length'.

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -86,5 +86,70 @@
     "tantraCarya": "སྤྱོད་རྒྱུད།",
     "tantraKriya": "བྱ་རྒྱུད།",
     "nyiTantra": "རྙིང་རྒྱུད།",
-    "kalacakra": "དུས་འཁོར།"
+    "kalacakra": "དུས་འཁོར།",
+    "yana": "ཐེག་པ།",
+    "yanaHinayana": "ཐེག་དམན།",
+    "yanaMahayana": "ཐེག་ཆེན།",
+    "yanaVajrayana": "རྡོ་རྗེ་ཐེག་པ།",
+    "sermon": "ཆོས་འཁོར།",
+    "sermonFirst": "ཆོས་འཁོར་དང་པོ།",
+    "sermonSecond": "ཆོས་འཁོར་གཉིས་པ།",
+    "sermonThird": "ཆོས་འཁོར་གསུམ་པ།",
+    "translationPeriod": "འགྱུར་སྔ་ཕྱི།",
+    "translationPeriodEarly": "འགྱུར་སྔ་མ།",
+    "translationPeriodNew": "འགྱུར་ཕྱི་མ།",
+    "manageKarchagContent": "དཀར་ཆག་ནང་དོན་དོ་དམ།",
+    "createEditManage": "བཀའ་འགྱུར་གཞུང་ཡིག་དང་སྡེ་ཚན་བཟོ་སྐྲུན། བཟོ་བཅོས། དོ་དམ་བྱེད།",
+    "createNewCategory": "སྡེ་ཚན་གསར་པ་བཟོ་བ།",
+    "createNewSubcategory": "ཁོངས་སྡེ་ཚན་གསར་པ་བཟོ་བ།",
+    "createNewText": "གཞུང་གསར་པ་བཟོ་བ།",
+    "searchCategories": "སྡེ་ཚན་འཚོལ་ཞིབ་བྱ།",
+    "searchSubcategories": "ཁོངས་སྡེ་ཚན་འཚོལ་ཞིབ་བྱ།",
+    "searchTexts": "གཞུང་འཚོལ་ཞིབ་བྱ།",
+    "loading": "འཇུག་བཞིན་པ།",
+    "active": "ཁྱབ་ཆེན།",
+    "inactive": "མི་ཁྱབ་ཆེན།",
+    "mainCategory": "གཙོ་བོའི་སྡེ་ཚན།",
+    "subCategory": "ཁོངས་སྡེ་ཚན།",
+    "subcategories": "ཁོངས་སྡེ་ཚན།",
+    "noCategoriesFound": "ཁྱེད་ཀྱི་འཚོལ་ཞིབ་དང་མཐུན་པའི་སྡེ་ཚན་མ་རྙེད།",
+    "noSubcategoriesFound": "ཁྱེད་ཀྱི་འཚོལ་ཞིབ་དང་མཐུན་པའི་ཁོངས་སྡེ་ཚན་མ་རྙེད།",
+    "noTextsFound": "ཁྱེད་ཀྱི་འཚོལ་ཞིབ་དང་མཐུན་པའི་གཞུང་མ་རྙེད།",
+    "categoryNotFound": "སྡེ་ཚན་མ་རྙེད།",
+    "editSubcategory": "ཁོངས་སྡེ་ཚན་བཟོ་བཅོས།",
+    "content": "ནང་དོན།",
+    "dergeId": "སྡེ་དགེ་ཆོས་ཚན་ཨང་།",
+    "yesheDeId": "ཡེ་ཤེས་སྡེ་ཆོས་ཚན་ཨང་།",
+    "englishTitle": "དབྱིན་ཡིག་མཚན་བྱང་།",
+    "tibetanTitle": "བོད་ཡིག་མཚན་བྱང་།",
+    "chineseTitle": "རྒྱ་ཡིག་མཚན་བྱང་།",
+    "sanskritTitle": "ལེགས་སྦྱར་མཚན་བྱང་།",
+    "yesheDeVolumeNumber": "ཡེ་ཤེས་སྡེ་པོད་རྟགས།",
+    "totalNumberOfPages": "ཤོག་གྲངས།",
+    "yesheDeSourceText": "ཡེ་ཤེས་སྡེ་མ་ཡིག",
+    "translationHomage": "འགྱུར་ཕྱག",
+    "purpose": "དགོས་དོན།",
+    "summary": "བསྡུས་དོན།",
+    "wordMeaning": "ཚིག་དོན།",
+    "connection": "མཚམས་སྦྱར།",
+    "objectionAndReply": "བརྒལ་ལན།",
+    "colophon": "འགྱུར་བྱང་།",
+    "categoryType": "སྡེ་ཚན་རིགས།",
+    "englishName": "དབྱིན་ཡིག་མཚན།",
+    "tibetanName": "བོད་ཡིག་མཚན།",
+    "englishDescription": "དབྱིན་ཡིག་འགྲེལ་བཤད།",
+    "tibetanDescription": "བོད་ཡིག་འགྲེལ་བཤད།",
+    "orderIndex": "རིམ་པའི་ཨང་ཐོ།",
+    "cancel": "ཆོག་མཆན་བཀོལ།",
+    "createCategory": "སྡེ་ཚན་བཟོ་བ།",
+    "saveChanges": "བཟོ་བཅོས་ཉར་ཚགས།",
+    "createText": "གཞུང་བཟོ་བ།",
+    "editText": "གཞུང་བཟོ་བཅོས།",
+    "editCategory": "སྡེ་ཚན་བཟོ་བཅོས།",
+    "createNewCategory": "སྡེ་ཚན་གསར་པ་བཟོ་བ།",
+    "selectMainCategory": "གཙོ་བོའི་སྡེ་ཚན་འདེམས།",
+    "selectSubcategory": "ཁོངས་སྡེ་ཚན་འདེམས།",
+    "pdfUrl": "PDF ཁ་བྱང་།",
+    "yesheDeVolumeLength": "ཡེ་ཤེས་སྡེ་པོད་ཚད།",
+    "optional": "རང་འདེམས།"
 }
