--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -86,5 +86,70 @@
     "tantraCarya": "Carya",
     "tantraKriya": "Kriya",
     "nyiTantra": "Nying",
-    "kalacakra": "Kalachakra"
+    "kalacakra": "Kalachakra",
+    "yana": "Yana",
+    "yanaHinayana": "Hinayana",
+    "yanaMahayana": "Mahayana",
+    "yanaVajrayana": "Vajrayana",
+    "sermon": "Sermon",
+    "sermonFirst": "First Sermon",
+    "sermonSecond": "Second Sermon",
+    "sermonThird": "Third Sermon",
+    "translationPeriod": "Translation Period",
+    "translationPeriodEarly": "Early Translation",
+    "translationPeriodNew": "New Translation",
+    "manageKarchagContent": "Manage Karchag Content",
+    "createEditManage": "Create, edit, and manage Kangyur texts and categories",
+    "createNewCategory": "Create New Category",
+    "createNewSubcategory": "Create New Subcategory",
+    "createNewText": "Create New Text",
+    "searchCategories": "Search categories...",
+    "searchSubcategories": "Search subcategories...",
+    "searchTexts": "Search texts...",
+    "loading": "Loading...",
+    "active": "Active",
+    "inactive": "Inactive",
+    "mainCategory": "Main Category",
+    "subCategory": "Sub Category",
+    "subcategories": "subcategories",
+    "noCategoriesFound": "No categories found matching your search.",
+    "noSubcategoriesFound": "No subcategories found matching your search.",
+    "noTextsFound": "No texts found matching your search.",
+    "categoryNotFound": "Category not found.",
+    "editSubcategory": "Edit Subcategory",
+    "content": "Content",
+    "dergeId": "Derge ID",
+    "yesheDeId": "Yeshe De ID",
+    "englishTitle": "English Title",
+    "tibetanTitle": "Tibetan Title",
+    "chineseTitle": "Chinese Title",
+    "sanskritTitle": "Sanskrit Title",
+    "yesheDeVolumeNumber": "Yeshe De Volume Number",
+    "totalNumberOfPages": "Total Number of Pages",
+    "yesheDeSourceText": "Yeshe De Source Text",
+    "translationHomage": "Translation Homage",
+    "purpose": "Purpose",
+    "summary": "Summary",
+    "wordMeaning": "Word Meaning",
+    "connection": "Connection",
+    "objectionAndReply": "Objection and Reply",
+    "colophon": "Colophon",
+    "categoryType": "Category Type",
+    "englishName": "English Name",
+    "tibetanName": "Tibetan Name",
+    "englishDescription": "English Description",
+    "tibetanDescription": "Tibetan Description",
+    "orderIndex": "Order Index",
+    "cancel": "Cancel",
+    "createCategory": "Create Category",
+    "saveChanges": "Save Changes",
+    "createText": "Create Text",
+    "editText": "Edit Text",
+    "editCategory": "Edit Category",
+    "createNewCategory": "Create New Category",
+    "selectMainCategory": "Select main category",
+    "selectSubcategory": "Select subcategory",
+    "pdfUrl": "PDF URL",
+    "yesheDeVolumeLength": "Yeshe De Volume Length",
+    "optional": "optional"
 }
