Refactor file upload and enhance category form components
- Updated uploadController to generate unique filenames by appending the original filename to the UUID.
- Enhanced CategoryForm to improve accessibility by adding required field indicators and updating labels for better clarity.
- Modified TextForm to include localized error messages for file upload validation and improved user feedback during PDF uploads.
- Updated Timeline component to utilize React Query for fetching timeline data, improving data handling and loading states.
- Refactored TextDetail to enhance metadata display and localization support, ensuring a better user experience across multiple languages.

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -100,7 +100,6 @@
     "translationPeriodNew": "འགྱུར་ཕྱི་མ།",
     "manageKarchagContent": "དཀར་ཆག་ནང་དོན་དོ་དམ།",
     "createEditManage": "བཀའ་འགྱུར་གཞུང་ཡིག་དང་སྡེ་ཚན་བཟོ་སྐྲུན། བཟོ་བཅོས། དོ་དམ་བྱེད།",
-    "createNewCategory": "སྡེ་ཚན་གསར་པ་བཟོ་བ།",
     "createNewSubcategory": "ཁོངས་སྡེ་ཚན་གསར་པ་བཟོ་བ།",
     "createNewText": "གཞུང་གསར་པ་བཟོ་བ།",
     "searchCategories": "སྡེ་ཚན་འཚོལ་ཞིབ་བྱ།",
@@ -151,5 +150,32 @@
     "selectSubcategory": "ཁོངས་སྡེ་ཚན་འདེམས།",
     "pdfUrl": "PDF ཁ་བྱང་།",
     "yesheDeVolumeLength": "ཡེ་ཤེས་སྡེ་པོད་ཚད།",
-    "optional": "རང་འདེམས།"
+    "optional": "རང་འདེམས།",
+    "pleaseSelectCategory": "སྡེ་ཚན་ཞིག་འདེམས་རོགས།",
+    "pleaseSelectPdfFile": "PDF ཡིག་ཆ་ཞིག་འདེམས་རོགས།",
+    "fileSizeMustBeLessThan100MB": "ཡིག་ཆའི་ཆེ་ཆུང་ལྔ་བཅུ་MB ལས་ཉུང་དགོས།",
+    "pdfUploadedSuccessfully": "PDF ཡིག་ཆ་ཡར་རྒྱུག་བྱས་ཟིན།",
+    "failedToUploadPdf": "PDF ཡིག་ཆ་ཡར་རྒྱུག་བྱེད་མ་ཐུབ།",
+    "creatingTextUnder": "གཞུང་བཟོ་བཞིན་པ།",
+    "enterPdfUrlOrUploadFile": "PDF ཁ་བྱང་འདེམས་པའམ་ཡིག་ཆ་ཡར་རྒྱུག་བྱེད།",
+    "uploading": "ཡར་རྒྱུག་བཞིན་པ།",
+    "uploadPdf": "PDF ཡར་རྒྱུག",
+    "resetPdfUrl": "PDF ཁ་བྱང་བསྐྱར་སྒྲིག",
+    "selectSermon": "ཆོས་འཁོར་འདེམས།",
+    "selectYana": "ཐེག་པ་འདེམས།",
+    "selectTranslationPeriod": "འགྱུར་སྔ་ཕྱི་འདེམས།",
+    "creatingSubcategoryUnder": "ཁོངས་སྡེ་ཚན་བཟོ་བཞིན་པ།",
+    "enterContentHere": "ནང་དོན་འདིར་འཇུག",
+    "textNotFound": "གཞུང་མ་རྙེད།",
+    "loadingSummary": "བསྡུས་དོན་འཇུག་བཞིན་པ།",
+    "noSummaryAvailable": "བསྡུས་དོན་མེད།",
+    "noPdfAvailable": "PDF མེད།",
+    "titlesInMultipleLanguages": "སྐད་རིགས་མང་པོའི་མཚན་བྱང་།",
+    "catalogInformation": "དཀར་ཆག་གནས་ཚུལ།",
+    "contentInformation": "ནང་དོན་གནས་ཚུལ།",
+    "generalInformation": "སྤྱིའི་གནས་ཚུལ།",
+    "summarySections": "བསྡུས་དོན་ཆ་ཤས།",
+    "metadata": "དཀར་ཆག",
+    "pdf": "PDF",
+    "yesheDeVolume": "ཡེ་ཤེས་སྡེ་པོད།"
 }
