--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -146,10 +146,36 @@
     "createText": "Create Text",
     "editText": "Edit Text",
     "editCategory": "Edit Category",
-    "createNewCategory": "Create New Category",
     "selectMainCategory": "Select main category",
     "selectSubcategory": "Select subcategory",
     "pdfUrl": "PDF URL",
     "yesheDeVolumeLength": "Yeshe De Volume Length",
-    "optional": "optional"
+    "optional": "optional",
+    "pleaseSelectCategory": "Please select a category",
+    "pleaseSelectPdfFile": "Please select a PDF file",
+    "fileSizeMustBeLessThan100MB": "File size must be less than 100MB",
+    "pdfUploadedSuccessfully": "PDF uploaded successfully",
+    "failedToUploadPdf": "Failed to upload PDF",
+    "creatingTextUnder": "Creating text under:",
+    "enterPdfUrlOrUploadFile": "Enter PDF URL or upload a file",
+    "uploading": "Uploading...",
+    "uploadPdf": "Upload PDF",
+    "resetPdfUrl": "Reset PDF URL",
+    "selectSermon": "Select Sermon",
+    "selectYana": "Select Yana",
+    "selectTranslationPeriod": "Select Translation Period",
+    "creatingSubcategoryUnder": "Creating subcategory under:",
+    "enterContentHere": "Enter content here...",
+    "textNotFound": "Text not found",
+    "loadingSummary": "Loading summary...",
+    "noSummaryAvailable": "No summary available",
+    "noPdfAvailable": "No PDF available",
+    "titlesInMultipleLanguages": "Titles in Multiple Languages",
+    "catalogInformation": "Catalog Information",
+    "contentInformation": "Content Information",
+    "generalInformation": "General Information",
+    "summarySections": "Summary Sections",
+    "metadata": "Metadata",
+    "pdf": "PDF",
+    "yesheDeVolume": "Yeshe De Volume"
 }
