Refactor admin components for localization and user feedback
- Updated AdminLayout to utilize localization for success messages and menu items.
- Enhanced CreateNewsForm and VideoForm to include localized placeholders, labels, and error messages for improved user experience.
- Refactored Dashboard and NewsAdmin components to support localization for titles and descriptions.
- Improved VideosAdmin to provide localized feedback during video management operations.
- Added new localization keys for various UI elements in both English and Tibetan.

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -177,5 +177,74 @@
     "summarySections": "བསྡུས་དོན་ཆ་ཤས།",
     "metadata": "དཀར་ཆག",
     "pdf": "PDF",
-    "yesheDeVolume": "ཡེ་ཤེས་སྡེ་པོད།"
+    "yesheDeVolume": "ཡེ་ཤེས་སྡེ་པོད།",
+    "createNewsArticle": "གསར་འགྱུར་གསར་པ་བཟོ་བ།",
+    "editNewsArticle": "གསར་འགྱུར་བཟོ་བཅོས།",
+    "englishContent": "དབྱིན་ཡིག་ནང་དོན།",
+    "tibetanContent": "བོད་ཡིག་ནང་དོན།",
+    "thumbnail": "བརྙན་རིས་ཆུང་ངུ།",
+    "thumbnailUrl": "བརྙན་རིས་ཆུང་ངུའི་ཁ་བྱང་།",
+    "publishedDate": "ཕྱི་བསྐྲུན་ཚེས་གྲངས།",
+    "upload": "ཡར་རྒྱུག",
+    "delete": "བསུབ།",
+    "edit": "བཟོ་བཅོས།",
+    "manageNewsContent": "གསར་འགྱུར་ནང་དོན་དོ་དམ།",
+    "createEditManageNews": "གསར་འགྱུར་གསར་པ་བཟོ་སྐྲུན། བཟོ་བཅོས། དོ་དམ་བྱེད།",
+    "createNews": "གསར་འགྱུར་གསར་པ་བཟོ་བ།",
+    "searchNewsArticles": "གསར་འགྱུར་འཚོལ་ཞིབ་བྱ།",
+    "loadingNews": "གསར་འགྱུར་འཇུག་བཞིན་པ།",
+    "noNewsArticlesFound": "ཁྱེད་ཀྱི་འཚོལ་ཞིབ་དང་མཐུན་པའི་གསར་འགྱུར་མ་རྙེད།",
+    "noNewsArticlesAvailable": "གསར་འགྱུར་མེད།",
+    "enterEnglishTitle": "དབྱིན་ཡིག་མཚན་བྱང་འཇུག",
+    "enterTibetanTitle": "བོད་ཡིག་གི་འགོ་བརྗོད།",
+    "enterEnglishContent": "དབྱིན་ཡིག་ནང་དོན་འཇུག",
+    "enterTibetanContent": "བོད་ཡིག་གི་ནང་དོན།",
+    "enterThumbnailUrl": "བརྙན་རིས་ཆུང་ངུའི་ཁ་བྱང་འདེམས་པའམ་ཡིག་ཆ་ཡར་རྒྱུག་བྱེད།",
+    "resetThumbnailUrl": "བརྙན་རིས་ཆུང་ངུའི་ཁ་བྱང་བསྐྱར་སྒྲིག",
+    "thumbnailPreview": "བརྙན་རིས་ཆུང་ངུའི་སྔོན་ལྟ།",
+    "optionalThumbnailUpload": "རང་འདེམས། གསར་འགྱུར་གྱི་བརྙན་རིས་ཆུང་ངུ་ཆེད་དུ་བརྙན་རིས་ཞིག་ཡར་རྒྱུག་བྱེད་པའམ་ཁ་བྱང་ཞིག་འཇུག",
+    "areYouSureDeleteNews": "གསར་འགྱུར་འདི་བསུབ་རྒྱུ་ཡིན་ནམ།",
+    "errorSavingNews": "གསར་འགྱུར་ཉར་ཚགས་བྱེད་སྐབས་ནོར་འཁྲུལ་བྱུང་། ཡང་སྐྱར་ཞུགས་རོགས།",
+    "errorDeletingNews": "གསར་འགྱུར་བསུབ་སྐབས་ནོར་འཁྲུལ་བྱུང་། ཡང་སྐྱར་ཞུགས་རོགས།",
+    "pleaseSelectValidImage": "བརྙན་རིས་ཡིག་ཆ་ཆོག་པ་ཞིག་འདེམས་རོགས། (JPEG, PNG, GIF, ཡང་ན་ WebP)",
+    "imageSizeMustBeLessThan10MB": "བརྙན་རིས་ཀྱི་ཆེ་ཆུང་ལྔ་MB ལས་ཉུང་དགོས།",
+    "thumbnailUploadedSuccessfully": "བརྙན་རིས་ཆུང་ངུ་ཡར་རྒྱུག་བྱས་ཟིན།",
+    "failedToUploadThumbnail": "བརྙན་རིས་ཆུང་ངུ་ཡར་རྒྱུག་བྱེད་མ་ཐུབ།",
+    "createVideo": "བརྙན་གསར་པ་བཟོ་བ།",
+    "editVideo": "བརྙན་བཟོ་བཅོས།",
+    "videoLink": "བརྙན་ཁ་བྱང་།",
+    "enterVideoUrl": "https://www.youtube.com/watch?v=...",
+    "enterVideoThumbnailUrl": "https://example.com/thumbnail.jpg",
+    "enterVideoUrlDescription": "YouTube, Vimeo, ཡང་ན་བརྙན་ཁ་བྱང་གཞན་ཞིག་འཇུག",
+    "optionalVideoThumbnailUrl": "རང་འདེམས། བརྙན་གྱི་བརྙན་རིས་ཆུང་ངུ་ཆེད་དུ་ཁ་བྱང་།",
+    "manageVideos": "བརྙན་དོ་དམ།",
+    "createEditManageVideos": "བརྙན་ནང་དོན་བཟོ་སྐྲུན། བཟོ་བཅོས། དོ་དམ་བྱེད།",
+    "searchVideos": "བརྙན་འཚོལ་ཞིབ་བྱ།",
+    "loadingVideos": "བརྙན་འཇུག་བཞིན་པ།",
+    "noVideosFound": "ཁྱེད་ཀྱི་འཚོལ་ཞིབ་དང་མཐུན་པའི་བརྙན་མ་རྙེད།",
+    "noVideosAvailable": "བརྙན་མེད། བརྙན་དང་པོ་བཟོ་རོགས།",
+    "viewVideo": "བརྙན་ལ་ལྟ།",
+    "areYouSureDeleteVideo": "བརྙན་འདི་བསུབ་རྒྱུ་ཡིན་ནམ།",
+    "errorSavingVideo": "བརྙན་ཉར་ཚགས་བྱེད་སྐབས་ནོར་འཁྲུལ་བྱུང་། ཡང་སྐྱར་ཞུགས་རོགས།",
+    "errorDeletingVideo": "བརྙན་བསུབ་སྐབས་ནོར་འཁྲུལ་བྱུང་། ཡང་སྐྱར་ཞུགས་རོགས།",
+    "videoCreatedSuccessfully": "བརྙན་བཟོ་སྐྲུན་བྱས་ཟིན།",
+    "videoUpdatedSuccessfully": "བརྙན་བཟོ་བཅོས་བྱས་ཟིན།",
+    "videoDeletedSuccessfully": "བརྙན་བསུབ་ཟིན།",
+    "failedToLoadVideos": "བརྙན་འཇུག་མ་ཐུབ།",
+    "englishDescription": "དབྱིན་ཡིག་འགྲེལ་བཤད།",
+    "tibetanDescription": "བོད་ཡིག་འགྲེལ་བཤད།",
+    "enterEnglishDescription": "དབྱིན་ཡིག་འགྲེལ་བཤད་འཇུག",
+    "enterTibetanDescription": "བོད་ཡིག་གི་ནང་དོན།",
+    "contentManagementBoard": "ནང་དོན་དོ་དམ་ལྷན་ཚོགས།",
+    "manageContentAcrossCategories": "སྡེ་ཚན་མི་འདྲ་བའི་ནང་དོན་དོ་དམ་བྱེད།",
+    "karchag": "དཀར་ཆག",
+    "users": "སྤྱོད་མཁན།",
+    "manageNewsArticles": "བརྙན་རིས་ཆུང་ངུ་དང་བཅས་པའི་གསར་འགྱུར་དོ་དམ་བྱེད།",
+    "manageVideoContent": "བརྙན་ནང་དོན་དང་ཁ་བྱང་དོ་དམ་བྱེད།",
+    "manageKangyurTexts": "བཀའ་འགྱུར་གཞུང་ཡིག་དང་ནང་དོན་དོ་དམ་བྱེད།",
+    "manageSystemUsers": "མ་ལག་སྤྱོད་མཁན་དོ་དམ་བྱེད།",
+    "manage": "དོ་དམ།",
+    "settings": "སྒྲིག་འཇུག",
+    "logOut": "ཕྱིར་ཐོན།",
+    "loggedOutSuccessfully": "ཕྱིར་ཐོན་བྱས་ཟིན།"
 }
