--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -177,5 +177,74 @@
     "summarySections": "Summary Sections",
     "metadata": "Metadata",
     "pdf": "PDF",
-    "yesheDeVolume": "Yeshe De Volume"
+    "yesheDeVolume": "Yeshe De Volume",
+    "createNewsArticle": "Create News Article",
+    "editNewsArticle": "Edit News Article",
+    "englishContent": "English Content",
+    "tibetanContent": "Tibetan Content",
+    "thumbnail": "Thumbnail",
+    "thumbnailUrl": "Thumbnail URL",
+    "publishedDate": "Published Date",
+    "upload": "Upload",
+    "delete": "Delete",
+    "edit": "Edit",
+    "manageNewsContent": "Manage News Content",
+    "createEditManageNews": "Create, edit, and manage news articles",
+    "createNews": "Create News",
+    "searchNewsArticles": "Search news articles...",
+    "loadingNews": "Loading news...",
+    "noNewsArticlesFound": "No news articles found matching your search.",
+    "noNewsArticlesAvailable": "No news articles available.",
+    "enterEnglishTitle": "Enter English title",
+    "enterTibetanTitle": "བོད་ཡིག་གི་འགོ་བརྗོད།",
+    "enterEnglishContent": "Enter English content",
+    "enterTibetanContent": "བོད་ཡིག་གི་ནང་དོན།",
+    "enterThumbnailUrl": "Enter thumbnail URL or upload a file",
+    "resetThumbnailUrl": "Reset Thumbnail URL",
+    "thumbnailPreview": "Thumbnail preview",
+    "optionalThumbnailUpload": "Optional: Upload an image or enter a URL for news thumbnail",
+    "areYouSureDeleteNews": "Are you sure you want to delete this news article?",
+    "errorSavingNews": "Error saving news. Please try again.",
+    "errorDeletingNews": "Error deleting news. Please try again.",
+    "pleaseSelectValidImage": "Please select a valid image file (JPEG, PNG, GIF, or WebP)",
+    "imageSizeMustBeLessThan10MB": "Image size must be less than 10MB",
+    "thumbnailUploadedSuccessfully": "Thumbnail uploaded successfully",
+    "failedToUploadThumbnail": "Failed to upload thumbnail",
+    "createVideo": "Create Video",
+    "editVideo": "Edit Video",
+    "videoLink": "Video Link",
+    "enterVideoUrl": "https://www.youtube.com/watch?v=...",
+    "enterVideoThumbnailUrl": "https://example.com/thumbnail.jpg",
+    "enterVideoUrlDescription": "Enter YouTube, Vimeo, or other video URL",
+    "optionalVideoThumbnailUrl": "Optional: URL for video thumbnail image",
+    "manageVideos": "Manage Videos",
+    "createEditManageVideos": "Create, edit, and manage video content",
+    "searchVideos": "Search videos...",
+    "loadingVideos": "Loading videos...",
+    "noVideosFound": "No videos found matching your search.",
+    "noVideosAvailable": "No videos available. Create your first video!",
+    "viewVideo": "View Video",
+    "areYouSureDeleteVideo": "Are you sure you want to delete this video?",
+    "errorSavingVideo": "Error saving video. Please try again.",
+    "errorDeletingVideo": "Error deleting video. Please try again.",
+    "videoCreatedSuccessfully": "Video created successfully",
+    "videoUpdatedSuccessfully": "Video updated successfully",
+    "videoDeletedSuccessfully": "Video deleted successfully",
+    "failedToLoadVideos": "Failed to load videos",
+    "englishDescription": "English Description",
+    "tibetanDescription": "Tibetan Description",
+    "enterEnglishDescription": "Enter English description",
+    "enterTibetanDescription": "བོད་ཡིག་གི་ནང་དོན།",
+    "contentManagementBoard": "Content Management Board",
+    "manageContentAcrossCategories": "Manage your content across different categories",
+    "karchag": "Karchag",
+    "users": "Users",
+    "manageNewsArticles": "Manage news articles with thumbnails",
+    "manageVideoContent": "Manage video content with links",
+    "manageKangyurTexts": "Manage Kangyur texts and content",
+    "manageSystemUsers": "Manage system users",
+    "manage": "Manage",
+    "settings": "Settings",
+    "logOut": "Log out",
+    "loggedOutSuccessfully": "Logged out successfully"
 }
