localisation updated with advisor, text and some other segment

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -6,7 +6,7 @@
     "history": "ལོ་རྒྱུས།",
     "catalog": "དཀར་ཆག",
     "news": "གསར་འགྱུར།",
-    "text": "པད་ཆ་",
+    "text": "ཆོེས་ཚན།",
     "videos": "བརྙན།",
     "aboutUs": "ང་ཚོའི་སྐོར།",
     "subtitle": "ནང་པའི་ཤེས་རབ་བརྒྱུད་དེ་ཁྱེད་ཀྱི་འགྲུལ་བཞུད་འགོ་རྩོམ།",
@@ -15,7 +15,7 @@
     "aboutThisProject": "ལས་གཞི་འདིའི་སྐོར།",
     "footerDescription": "བོད་བརྒྱུད་ནང་བསྟན་གྱི་བཀའ་འགྱུར་ཕྱོགས་སྒྲིག་གི་ཆེད་དུ་ཆ་ཚང་བའི་བརྡ་ཐོ་དཔེ་མཛོད་ཅིག་སྟེ། དམ་པའི་གཞུང་ཡིག་དང་། ཡིག་སྒྱུར། དེ་བཞིན་སློབ་གསོའི་ཐོན་ཁུངས་ཁག་ལ་བལྟ་ཐུབ་པ་བྱེད་ཀྱི་ཡོད།",
     "madeWithLove": {
-        "pre": "ནང་པའི་ཤེས་རབ་སྲུང་སྐྱོབ་ཀྱི་ཆེད་དུ་བྱམས་སེམས་ཀྱིས་བཟོས་པ།",
+        "pre": "ནང་པའི་གསུངས་ཀྱི་བསྟན་པ་སྐྱོབས་ཆེད་དུ་བྱམས་བརྩེ་ངང་བཟོས་པ།",
         "post": ""
     },
     "historyTitle": "བཀའ་འགྱུར་གྱི་ལོ་རྒྱུས།",
@@ -38,6 +38,7 @@
     "vision": "དམིགས་ཡུལ།",
     "project": "ལས་གཞི།",
     "team": "ལས་བྱེད།",
+    "advisors": "ལམ་སྟོན་པ།",
     "contact": "འབྲེལ་གཏུགས།",
     "missionDescription": "ཝཱ་ར་ཎ་སིའི་རྒྱལ་སྤྱིའི་རྙིང་མའི་སློབ་གླིང་གིས་བཀའ་འགྱུར་ཏེ། སངས་རྒྱས་ཀྱི་བཀའ་བོད་སྐད་དུ་བསྒྱུར་བ་དེ་ཉིད་མཁས་པ་དང་། ཉམས་ལེན་པ། རྒྱབ་སྐྱོར་བ་རྣམས་ལ་ང་ཚོའི་ཡོངས་ཁྱབ་བརྙན་རྫས་སྡིངས་ཆའི་བརྒྱུད་ནས་མཐུན་འགྱུར་བྱ་རྒྱུར་དམིགས་ཡུལ་བཟུང་།",
     "projectDescription": "ང་ཚོའི་གསར་གཏོད་ཅན་གྱི་བཀའ་འགྱུར་བརྙན་རྫས་ལས་གཞི་འདིས་ནང་པའི་བསྟན་པའི་རིན་ཐང་བྲལ་བའི་མཛོད་འདི་ཉར་ཚགས་དང་བགོ་བཤའ་བྱེད་པར་སྔ་ན་མེད་པའི་འབད་བརྩོན་བྱེད་བཞིན་ཡོད། ང་ཚོའི་ལས་འགུལ་འདི་ཐུན་མོང་མ་ཡིན་པ་ཆགས་དོན་ནི།",
