Update History page to use localized description and adjust NewsDetail padding
- Added a localized history description to the History component, enhancing content accessibility in both English and Tibetan.
- Adjusted padding in the NewsDetail component for improved layout consistency.

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -1,6 +1,7 @@
 {
     "title": "བཀའ་འགྱུར་དཀར་ཆག",
     "description": "སངས་རྒྱས་ཀྱི་བསྟན་པར་བརྡ་ཐོ་འཕྲུལ་ཆས་བརྒྱུད་དེ་གནའ་བོའི་ཤེས་རབ་སྒོ་འབྱེད་བྱེད་པ—བརྟག་དཔྱད་བྱེད། ཉན། དུས་ལས་འདས་པའི་བྱང་ཆུབ་ཀྱི་ལམ་རྙེད།",
+    "historyDescription": "བཀའ་འགྱུར་གྱི་ལོ་རྒྱུས་དང་པོ། སངས་རྒྱས་ཀྱི་བསྟན་པར་བརྡ་ཐོ་འཕྲུལ་ཆས་བརྒྱུད་དེ་གནའ་བོའི་ཤེས་རབ་སྒོ་འབྱེད་བྱེད་པ—བརྟག་དཔྱད་བྱེད། ཉན། དུས་ལས་འདས་པའི་བྱང་ཆུབ་ཀྱི་ལམ་རྙེད།",
     "exploreButton": "དཔེ་མཛོད་ལ་བརྟག་དཔྱད་བྱེད།",
     "home": "མདུན་ངོས།",
     "history": "ལོ་རྒྱུས།",
