--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -1,6 +1,7 @@
 {
     "title": "Kangyur Karchag",
     "description": "Unlocking ancient wisdom through digital access to Buddha's teachings — explore, listen, and discover the timeless path to enlightenment.",
+    "historyDescription": "The Kangyur represents over a millennium of careful translation, compilation, and preservation work.\n This timeline traces the major developments from the first translations during the Tibetan Empire \nto the modern digital editions available today.",
     "exploreButton": "Explore Karchag",
     "home": "Home",
     "history": "History",
