updated some localisation

--- a/frontend/src/utils/i18n/locales/bod/bod.json
+++ b/frontend/src/utils/i18n/locales/bod/bod.json
@@ -7,7 +7,7 @@
     "history": "ལོ་རྒྱུས།",
     "catalog": "དཀར་ཆག",
     "news": "གསར་འགྱུར།",
-    "text": "ཆོེས་ཚན།",
+    "text": "ཆོས་ཚན།",
     "videos": "བརྙན།",
     "aboutUs": "ང་ཚོའི་སྐོར།",
     "subtitle": "ནང་པའི་ཤེས་རབ་བརྒྱུད་དེ་ཁྱེད་ཀྱི་འགྲུལ་བཞུད་འགོ་རྩོམ།",
@@ -140,21 +140,21 @@
     "englishDescription": "དབྱིན་ཡིག་འགྲེལ་བཤད།",
     "tibetanDescription": "བོད་ཡིག་འགྲེལ་བཤད།",
     "orderIndex": "རིམ་པའི་ཨང་ཐོ།",
-    "cancel": "ཆོག་མཆན་བཀོལ།",
-    "createCategory": "སྡེ་ཚན་བཟོ་བ།",
+    "cancel": "རྩིས་མེད་གཏོང་།",
+    "createCategory": "སྡེ་ཚན་བཟོ།",
     "saveChanges": "བཟོ་བཅོས་ཉར་ཚགས།",
     "createText": "གཞུང་བཟོ་བ།",
     "editText": "གཞུང་བཟོ་བཅོས།",
     "editCategory": "སྡེ་ཚན་བཟོ་བཅོས།",
-    "createNewCategory": "སྡེ་ཚན་གསར་པ་བཟོ་བ།",
-    "selectMainCategory": "གཙོ་བོའི་སྡེ་ཚན་འདེམས།",
-    "selectSubcategory": "ཁོངས་སྡེ་ཚན་འདེམས།",
+    "createNewCategory": "སྡེ་ཚན་གསར་པ་བཟོ།",
+    "selectMainCategory": "གཙོ་བོའི་སྡེ་ཚན།",
+    "selectSubcategory": "ནང་གསེས་སྡེ་ཚན།",
     "pdfUrl": "PDF ཁ་བྱང་།",
     "yesheDeVolumeLength": "ཡེ་ཤེས་སྡེ་པོད་ཚད།",
     "optional": "རང་འདེམས།",
     "pleaseSelectCategory": "སྡེ་ཚན་ཞིག་འདེམས་རོགས།",
     "pleaseSelectPdfFile": "PDF ཡིག་ཆ་ཞིག་འདེམས་རོགས།",
-    "fileSizeMustBeLessThan100MB": "ཡིག་ཆའི་ཆེ་ཆུང་ལྔ་བཅུ་MB ལས་ཉུང་དགོས།",
+    "fileSizeMustBeLessThan100MB": "ཡིག་ཆའི་ཆེ་ཆུང་ ༡༠༠MB ལས་ཉུང་དགོས།",
     "pdfUploadedSuccessfully": "PDF ཡིག་ཆ་ཡར་རྒྱུག་བྱས་ཟིན།",
     "failedToUploadPdf": "PDF ཡིག་ཆ་ཡར་རྒྱུག་བྱེད་མ་ཐུབ།",
     "creatingTextUnder": "གཞུང་བཟོ་བཞིན་པ།",
@@ -167,7 +167,7 @@
     "selectTranslationPeriod": "འགྱུར་སྔ་ཕྱི་འདེམས།",
     "creatingSubcategoryUnder": "ཁོངས་སྡེ་ཚན་བཟོ་བཞིན་པ།",
     "enterContentHere": "ནང་དོན་འདིར་འཇུག",
-    "textNotFound": "གཞུང་མ་རྙེད།",
+    "textNotFound": "གཞུང་རྙེད་མ་སོང་།",
     "loadingSummary": "བསྡུས་དོན་འཇུག་བཞིན་པ།",
     "noSummaryAvailable": "བསྡུས་དོན་མེད།",
     "noPdfAvailable": "PDF མེད།",
