--- a/frontend/src/utils/i18n/locales/en/en.json
+++ b/frontend/src/utils/i18n/locales/en/en.json
@@ -5,7 +5,7 @@
     "exploreButton": "Explore Karchag",
     "home": "Home",
     "history": "History",
-    "catalog": "Karchag",
+    "catalog": "Catalog",
     "news": "News",
     "text": "Text",
     "videos": "Videos",
